resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: gitops.sa.cf-cd.com
      http:
        paths:
          - path: /argocd(/|$)(.*)
            backend:
              service:
                name: argo-cd-server
                port:
                  number: 80
            pathType: ImplementationSpecific
